# voice-agents-hack

./: .dockerignore  .gitignore  CLI.md  README.md
desert/: .dockerignore  .env.example  README.md  pyproject.toml
desert/backend/: __init__.py
desert/backend/orchestrator/: main.py  store.py
desert/bootstrap_server/: __init__.py  main.py  p2p_thread.py
desert/cli/: __init__.py  main.py  orchestrator_app.py  serve.py  voice.py
desert/docker/: Dockerfile.bootstrap  Dockerfile.desert  entrypoint.sh
desert/p2p/: __init__.py  bootstrap_client.py  bootstrap_http_addrs.py  codec.py  orchestrator_bridge.py  orchestrator_service.py  swarm.py  task_service.py
desert/scripts/: lan-ip.sh
desert/worker/: __init__.py  cactus_pipeline.py  worker.py  worker_p2p.py
desert/worker/tools/: __init__.py  doc_analyzer.py  web_search.py  youtube.py
examples/: main.py
