[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desert-voice-agent"
version = "0.1.0"
description = "Distributed agents: orchestrator (TUI + API), workers, bootstrap server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "edge-tts>=6.1.0",
    "yt-dlp>=2024.11.0",
    "huggingface-hub>=0.24.0",
    "google-genai>=1.0.0",
    "libp2p>=0.3",
    "textual>=8.2.3",
    "typer>=0.24.1",
]

[project.scripts]
desert = "cli.main:main"
desert-bootstrap = "bootstrap_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["backend", "worker", "p2p", "cli", "bootstrap_server"]
